--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-npm-package-template",
+  "name": "@h4ad/serverless-adapter",
   "version": "0.0.0-development",
-  "description": "A template for creating npm packages using TypeScript and VSCode",
+  "description": "This library enables you to utilize AWS Lambda and Amazon API Gateway to respond to web and API requests using your existing Node.js application framework.",
   "main": "./lib/src/index.js",
   "files": [
     "lib/**/*"
@@ -20,53 +20,59 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryansonshine/typescript-npm-package-template.git"
+    "url": "git+https://github.com/H4ad/serverless-adapter.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Ryan Sonshine",
-    "email": "ryansonshine@users.noreply.github.com",
-    "url": "https://github.com/ryansonshine"
+    "name": "Vinícius Lourenço",
+    "email": "H4ad@users.noreply.github.com",
+    "url": "https://github.com/H4ad"
   },
   "engines": {
     "node": ">=12.0"
   },
   "keywords": [
-    "boilerplate",
-    "template",
-    "typescript",
-    "vscode",
-    "jest",
-    "husky",
-    "commitizen",
-    "semantic-release",
-    "codecov"
+    "aws",
+    "serverless",
+    "api gateway",
+    "lambda",
+    "express",
+    "koa",
+    "hapi",
+    "sails",
+    "node.js",
+    "http"
   ],
   "bugs": {
-    "url": "https://github.com/ryansonshine/typescript-npm-package-template/issues"
+    "url": "https://github.com/H4ad/serverless-adapter/issues"
   },
-  "homepage": "https://github.com/ryansonshine/typescript-npm-package-template#readme",
+  "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.11",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/node": "12.20.43",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "body-parser": "^1.19.1",
     "codecov": "^3.8.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "ejs": "^3.1.6",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "express": "^4.17.2",
     "husky": "^6.0.0",
-    "jest": "^27.2.0",
+    "jest": "^27.4.7",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "semantic-release": "^19.0.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.2.4"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "config": {
     "commitizen": {
