--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "url": "https://github.com/H4ad/serverless-adapter/issues"
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
-  "dependencies": {},
   "devDependencies": {
+    "@hapi/hapi": ">= 16.8.3",
+    "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.13",
+    "@types/express": ">= 4.15.4",
+    "@types/hapi": ">=16.1.8",
     "@types/jest": "^27.4.0",
+    "@types/koa": "^2.13.4",
     "@types/node": "12.20.43",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -64,9 +67,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "express": "^4.17.2",
+    "express": ">= 4.15.4",
     "husky": "^6.0.0",
     "jest": "^27.4.7",
+    "koa": ">=2.5.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "semantic-release": "^19.0.2",
