test(event-bridge): added tests to event bridge

--- a/test/adapters/test.example
+++ b/test/adapters/test.example
@@ -11,27 +11,7 @@ describe(Adapter.name, () => {
     });
   });
 
-  describe('canHandle', () => {
-    it('should return true when is valid event', () => {
-      const events = allExampleEvents.filter(
-        ([adapterName]) => adapterName === adapter.getAdapterName()
-      )!;
-
-      for (const [, event] of events) {
-        expect(adapter.canHandle(event)).toBe(true);
-      }
-    });
-
-    it('should return false when is not a valid event', () => {
-      const events = allExampleEvents.filter(
-        ([adapterName]) => adapterName !== adapter.getAdapterName()
-      );
-
-      for (const [, event] of events) {
-        expect(adapter.canHandle(event)).toBe(false);
-      }
-    });
-  });
+  createCanHandleTestsForAdapter(() => new Adapter(), undefined);
 
   describe('getRequest', () => {
     it('should return the correct mapping for the request', () => {
