feat(eslint & tools-version): added better rules to eslint and added tools version for nodejs

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "lib/**/*"
   ],
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
+    "prepare": "husky install",
     "build": "tsc",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
     "coverage": "codecov",
-    "lint": "eslint ./src/ --fix",
-    "prepare": "husky install",
+    "lint": "eslint ./src/ ./test/  --fix",
     "semantic-release": "semantic-release",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
@@ -56,27 +57,31 @@
     "@types/jest": "^27.4.0",
     "@types/koa": "^2.13.4",
     "@types/node": "12.20.43",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "body-parser": "^1.19.1",
     "codecov": "^3.8.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "ejs": "^3.1.6",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": ">= 4.15.4",
     "husky": "^6.0.0",
     "jest": "^27.4.7",
     "koa": ">=2.5.1",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
+    "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "ansi-regex": "5.0.1"
   },
   "config": {
     "commitizen": {
