--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
+    "stream-mock": "^2.0.5",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
