--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "express",
     "koa",
     "hapi",
-    "sails",
+    "fastify",
     "node.js",
     "http"
   ],
@@ -49,13 +49,9 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
-    "@hapi/hapi": ">= 16.8.3",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
-    "@types/express": ">= 4.15.4",
-    "@types/hapi": ">=16.1.8",
     "@types/jest": "^27.4.0",
-    "@types/koa": "^2.13.4",
     "@types/node": "12.20.43",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -69,10 +65,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express": ">= 4.15.4",
     "husky": "^6.0.0",
     "jest": "^27.4.7",
-    "koa": ">=2.5.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
@@ -80,6 +74,38 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "@hapi/hapi": ">= 20.0.0",
+    "@types/express": ">= 4.15.4",
+    "@types/hapi": ">= 18.0.7",
+    "@types/koa": ">= 2.11.2",
+    "express": ">= 4.15.4",
+    "fastify": ">= 3.0.0",
+    "koa": ">= 2.5.1"
+  },
+  "peerDependenciesMeta": {
+    "@hapi/hapi": {
+      "optional": true
+    },
+    "express": {
+      "optional": true
+    },
+    "fastify": {
+      "optional": true
+    },
+    "koa": {
+      "optional": true
+    },
+    "@types/express": {
+      "optional": true
+    },
+    "@types/hapi": {
+      "optional": true
+    },
+    "@types/koa": {
+      "optional": true
+    }
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
