--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
+      - name: Install peer dependencies
+        run: npm run install:peers
       - name: Test
         run: npm test
       - name: Build
