chore(docs): try added docs with tsdoc

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # Local env vars for debugging
 TS_NODE_IGNORE="false"
 TS_NODE_FILES="true"
+
+# Algolia
+API_KEY=35b54c18239d746fe89e62001814e380
+APP_ID=J9AIR51403
