--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "eslint-plugin-tsdoc"
   ],
   "parserOptions": {
     "project": [
@@ -20,6 +21,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "tsdoc/syntax": "error",
     "prettier/prettier": "warn",
     "comma-dangle": [
       "error",
