--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "install:peers": "npx npm-install-peers",
     "prepare": "husky install",
     "build": "tsc -p tsconfig.build.json",
+    "build:docs": "tsc -p tsconfig.doc.json",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
     "coverage": "codecov",
     "lint": "eslint ./src/ ./test/  --fix",
     "semantic-release": "semantic-release",
+    "docs:generate:api-pages": "ts-node scripts/apidoc.ts",
+    "docs:generate:api-pages-test": "ts-node scripts/apidoc-test.ts",
+    "docs:typedoc": "npm run build:docs && npm run docs:typedoc:extract:local && npm run docs:typedoc:extract && npm run docs:typedoc:markdown",
+    "docs:typedoc:extract:local": "npx @microsoft/api-extractor run --local",
+    "docs:typedoc:extract": "npx @microsoft/api-extractor run",
+    "docs:typedoc:markdown": "npx @microsoft/api-documenter markdown --input-folder temp --output-folder docs/api",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
     "typecheck": "tsc --noEmit"
@@ -53,6 +63,10 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
+    "@microsoft/api-documenter": "^7.17.0",
+    "@microsoft/api-extractor": "^7.20.0",
+    "@microsoft/api-extractor-model": "^7.16.0",
+    "@microsoft/tsdoc": "^0.13.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
     "@types/jest": "^27.4.0",
@@ -69,6 +83,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "husky": "^6.0.0",
     "jest": "^27.5.1",
     "lint-staged": "^10.5.4",
@@ -77,7 +92,9 @@
     "stream-mock": "^2.0.5",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typedoc": "^0.22.13",
+    "typescript": "^4.5.5",
+    "vitepress": "^0.22.3"
   },
   "peerDependencies": {
     "@hapi/hapi": ">= 20.0.0",
