docs(scripts): added scripts to generate markdown, api pages and other stuffs using tsdoc

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "coverage": "codecov",
     "lint": "eslint ./src/ ./test/  --fix",
     "semantic-release": "semantic-release",
-    "docs:generate:api-pages": "ts-node scripts/apidoc.ts",
-    "docs:generate:api-pages-test": "ts-node scripts/apidoc-test.ts",
-    "docs:generate:api-pages-test-1": "ts-node scripts/apidoc-test-1.ts",
+    "docs:parse": "npm run build:docs && ts-node scripts/parse-docs.ts",
+    "docs:generate:markdown": "ts-node scripts/generate-markdown.ts",
+    "docs:generate:api-pages": "ts-node scripts/generate-api-pages.ts",
     "docs:typedoc": "npm run build:docs && npm run docs:typedoc:extract:local && npm run docs:typedoc:extract && npm run docs:typedoc:markdown",
     "docs:typedoc:extract:local": "npx @microsoft/api-extractor run --local",
     "docs:typedoc:extract": "npx @microsoft/api-extractor run",
@@ -68,6 +68,7 @@
     "@microsoft/api-extractor": "^7.20.0",
     "@microsoft/api-extractor-model": "^7.16.0",
     "@microsoft/tsdoc": "^0.13.2",
+    "@rushstack/node-core-library": "^3.45.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
     "@types/jest": "^27.4.0",
