--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "hapi",
     "fastify",
     "node.js",
-    "http"
+    "http",
+    "huawei",
+    "functiongraph"
   ],
   "bugs": {
     "url": "https://github.com/H4ad/serverless-adapter/issues"
@@ -57,6 +59,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/jest": "^27.4.0",
     "@types/node": "12.20.43",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "body-parser": "^1.19.1",
@@ -75,6 +78,7 @@
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
     "stream-mock": "^2.0.5",
+    "supertest": "^6.2.3",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
