chore(package): bump versions of microsoft packages to the same version

--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.17.0",
-    "@microsoft/api-extractor": "^7.20.0",
-    "@microsoft/api-extractor-model": "^7.16.0",
-    "@microsoft/tsdoc": "^0.13.2",
+    "@microsoft/api-documenter": "7.17.16",
+    "@microsoft/api-extractor": "7.24.2",
+    "@microsoft/api-extractor-model": "7.17.3",
+    "@microsoft/tsdoc": "0.14.1",
     "@rushstack/node-core-library": "^3.45.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
