--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   ],
   "parserOptions": {
     "project": [
-      "./tsconfig.doc.json"
+      "./tsconfig.eslint.json"
     ]
   },
   "extends": [
