chore(scripts): added another script and renamed parse to generate:parsing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "coverage": "codecov",
     "lint": "eslint ./src/ ./test/  --fix",
     "semantic-release": "semantic-release",
-    "docs:parse": "npm run build:docs && ts-node scripts/parse-docs.ts",
+    "docs:generate": "npm run docs:generate:parsing && npm run docs:generate:markdown && npm run docs:generate:api-pages",
+    "docs:generate:parsing": "npm run build:docs && ts-node scripts/parse-docs.ts",
     "docs:generate:markdown": "ts-node scripts/generate-markdown.ts",
     "docs:generate:api-pages": "ts-node scripts/generate-api-pages.ts",
     "test:watch": "jest --watch",
