ci(docs): added command to install peer dependencies

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install Lib Dependencies
         run: npm ci
 
+      - name: Install Peers Dependencies
+        run: npm run install:peers
+
       - name: Install Docs Dependencies
         run: npm ci
         working-directory: www
