ci(docs): removed deploy for each pull request and added deploy by manual trigger

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ on:
       - '.github/workflows/deploy.yml'
       - 'www/**'
       - 'src/**'
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   deploy:
