--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@h4ad/serverless-adapter",
   "version": "0.0.0-development",
-  "description": "This library enables you to utilize any Cloud or Event Source to respond to web and API requests using your existing Node.js application framework.",
+  "description": "Run REST APIs and other web applications using your existing Node.js application framework (NestJS, Express, Koa, Hapi, Fastify and many others), on top of AWS, Huawei and many other clouds.",
   "main": "./lib/index.js",
   "files": [
     "lib/**/*"
