ci(pr): fixed wrong cache key when restore for docs

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -60,9 +60,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-14.x-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-14.x-
 
       - name: Install Lib Dependencies
         run: npm ci
