chore(package): added more keywords

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@h4ad/serverless-adapter",
   "version": "0.0.0-development",
-  "description": "Run REST APIs and other web applications using your existing Node.js application framework (NestJS, Express, Koa, Hapi, Fastify and many others), on top of AWS, Huawei and many other clouds.",
+  "description": "Run REST APIs and other web applications using your existing Node.js application framework (NestJS, Express, Koa, Hapi, Fastify and many others), on top of AWS, Azure, Huawei and many other clouds.",
   "main": "./lib/index.js",
   "files": [
     "lib/**/*"
@@ -54,7 +54,10 @@
     "http",
     "huawei",
     "functiongraph",
-    "trpc"
+    "trpc",
+    "azure",
+    "azure-functions",
+    "http-trigger-v4"
   ],
   "bugs": {
     "url": "https://github.com/H4ad/serverless-adapter/issues"
