ci(pr & firebase): fixed test firebase on nodejs 12.x

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Build
         run: npm run build --if-present
 
-      - name: Override Fastify Version for NodeJS 12.x
+      - name: Override Packages Versions for NodeJS 12.x
         if: matrix.node-version == '12.x'
-        run: echo "FASTIFY_VERSION=3.x" >> $GITHUB_ENV
+        run: echo "TEST_NODE_VERSION=12.x" >> $GITHUB_ENV
 
       - name: Run tests
         run: npm test
