--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
-    "@deepkit/app": "^1.0.1-alpha.74",
-    "@deepkit/framework": "^1.0.1-alpha.74",
-    "@deepkit/http": "^1.0.1-alpha.74",
+    "@deepkit/app": ">= 1.0.1-alpha.74",
+    "@deepkit/framework": ">= 1.0.1-alpha.74",
+    "@deepkit/http": ">= 1.0.1-alpha.74",
+    "@deepkit/type": ">= 1.0.1-alpha.74",
+    "@deepkit/type-compiler": ">= 1.0.1-alpha.74",
     "@hapi/hapi": "^20.2.2",
     "@microsoft/api-documenter": "7.17.16",
     "@microsoft/api-extractor": "7.24.2",
@@ -80,7 +82,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/hapi": "^18.0.7",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^28.1.6",
     "@types/koa": "^2.13.5",
     "@types/node": "12.20.43",
     "@types/supertest": "^2.0.12",
@@ -100,14 +102,14 @@
     "express": "^4.18.1",
     "fastify": "^4.3.0",
     "husky": "^6.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
     "koa": "^2.13.4",
     "lint-staged": "^10.5.4",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.3",
     "stream-mock": "^2.0.5",
     "supertest": "^6.2.3",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.13",
     "typescript": "^4.5.5"
