--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
+    "@azure/functions": "^3.2.0",
     "@deepkit/app": ">= 1.0.1-alpha.74",
+    "@deepkit/core": ">= 1.0.1-alpha.74",
     "@deepkit/framework": ">= 1.0.1-alpha.74",
     "@deepkit/http": ">= 1.0.1-alpha.74",
     "@deepkit/type": ">= 1.0.1-alpha.74",
@@ -78,6 +80,7 @@
     "@microsoft/api-extractor-model": "7.17.3",
     "@microsoft/tsdoc": "0.14.1",
     "@rushstack/node-core-library": "^3.45.2",
+    "@trpc/server": "^9.26.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
@@ -101,6 +104,10 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "express": "^4.18.1",
     "fastify": "^4.3.0",
+    "fastify-3": "npm:fastify@3.29.0",
+    "firebase-admin": "^11.0.1",
+    "firebase-admin-8": "npm:firebase-admin@^8.0.0",
+    "firebase-functions": "^3.22.0",
     "husky": "^6.0.0",
     "jest": "^28.1.3",
     "koa": "^2.13.4",
