ci(pr): added command to update npm

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Update NPM Version
+        run: npm i -g npm
+
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
