--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "api gateway",
     "sqs",
     "sns",
-    "lambda-edge",
+    "lambda edge",
     "alb",
     "lambda",
     "express",
@@ -55,13 +55,16 @@
     "functiongraph",
     "trpc",
     "azure",
-    "azure-functions",
-    "http-trigger-v4",
+    "azure functions",
+    "http trigger v4",
     "firebase",
-    "firebase-functions",
-    "firebase-http-events",
+    "firebase functions",
+    "firebase http events",
     "deepkit",
-    "deepkit http"
+    "deepkit http",
+    "digital ocean",
+    "digital ocean functions",
+    "digital ocean serverless"
   ],
   "bugs": {
     "url": "https://github.com/H4ad/serverless-adapter/issues"
