--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
+    "@apollo/server": "^4.1.1",
     "@azure/functions": "^3.2.0",
     "@deepkit/app": ">= 1.0.1-alpha.74",
     "@deepkit/core": ">= 1.0.1-alpha.74",
@@ -123,7 +124,7 @@
     "ts-jest": "^28.0.7",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.13",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "@azure/functions": ">= 2.0.0",
