--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@trpc/server": "^9.26.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/hapi": "^18.0.7",
     "@types/jest": "^28.1.6",
@@ -98,6 +99,7 @@
     "body-parser": "^1.19.1",
     "codecov": "^3.8.1",
     "commitizen": "^4.2.4",
+    "cors": "^2.8.5",
     "cz-conventional-changelog": "^3.3.0",
     "ejs": "^3.1.6",
     "eslint": "^8.9.0",
@@ -131,9 +133,11 @@
     "@hapi/hapi": ">= 20.0.0",
     "@trpc/server": ">= 9.0.0",
     "@types/aws-lambda": ">= 8.10.92",
+    "@types/cors": ">= 2.8.12",
     "@types/express": ">= 4.15.4",
     "@types/hapi": ">= 18.0.7",
     "@types/koa": ">= 2.11.2",
+    "cors": ">= 2.8.5",
     "express": ">= 4.15.4",
     "fastify": ">= 3.0.0",
     "fastify-3": "npm:fastify@3.29.0",
