--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.20.1",
     "codecov": "^3.8.1",
     "commitizen": "^4.2.4",
     "cors": "^2.8.5",
@@ -133,10 +133,12 @@
     "@hapi/hapi": ">= 20.0.0",
     "@trpc/server": ">= 9.0.0",
     "@types/aws-lambda": ">= 8.10.92",
+    "@types/body-parser": ">= 1.19.2",
     "@types/cors": ">= 2.8.12",
     "@types/express": ">= 4.15.4",
     "@types/hapi": ">= 18.0.7",
     "@types/koa": ">= 2.11.2",
+    "body-parser": ">= 1.20.0",
     "cors": ">= 2.8.5",
     "express": ">= 4.15.4",
     "fastify": ">= 3.0.0",
@@ -144,6 +146,7 @@
     "firebase-admin": ">= 8.0.0",
     "firebase-admin-8": "npm:firebase-admin@^8.0.0",
     "firebase-functions": ">= 3.0.0",
+    "http-errors": ">= 2.0.0",
     "koa": ">= 2.5.1",
     "reflect-metadata": "^0.1.13"
   },
@@ -172,6 +175,9 @@
     "@types/koa": {
       "optional": true
     },
+    "body-parser": {
+      "optional": true
+    },
     "express": {
       "optional": true
     },
@@ -188,6 +194,9 @@
       "optional": true
     },
     "firebase-functions": {
+      "optional": true
+    },
+    "http-errors": {
       "optional": true
     },
     "koa": {
