chore(package): upgrade tsdocs packages to fix build

--- a/package.json
+++ b/package.json
@@ -80,11 +80,11 @@
     "@deepkit/type": ">= 1.0.1-alpha.74",
     "@deepkit/type-compiler": ">= 1.0.1-alpha.74",
     "@hapi/hapi": "^20.2.2",
-    "@microsoft/api-documenter": "7.17.16",
-    "@microsoft/api-extractor": "7.24.2",
-    "@microsoft/api-extractor-model": "7.17.3",
-    "@microsoft/tsdoc": "0.14.1",
-    "@rushstack/node-core-library": "^3.45.2",
+    "@microsoft/api-documenter": "7.19.24",
+    "@microsoft/api-extractor": "7.33.6",
+    "@microsoft/api-extractor-model": "7.25.2",
+    "@microsoft/tsdoc": "0.14.2",
+    "@rushstack/node-core-library": "3.53.2",
     "@trpc/server": "^9.26.2",
     "@types/aws-lambda": "^8.10.92",
     "@types/body-parser": "^1.19.2",
@@ -124,9 +124,9 @@
     "stream-mock": "^2.0.5",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.7",
-    "ts-node": "^10.4.0",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.21",
+    "typescript": "~4.7.4"
   },
   "peerDependencies": {
     "@azure/functions": ">= 2.0.0",
