--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@deepkit/http": ">= 1.0.1-alpha.74",
     "@deepkit/type": ">= 1.0.1-alpha.74",
     "@deepkit/type-compiler": ">= 1.0.1-alpha.74",
+    "@google-cloud/functions-framework": "^3.1.3",
     "@hapi/hapi": "^20.2.2",
     "@microsoft/api-documenter": "7.19.24",
     "@microsoft/api-extractor": "7.33.6",
@@ -133,6 +134,7 @@
     "@apollo/server": ">= 4.0.0",
     "@azure/functions": ">= 2.0.0",
     "@deepkit/http": ">= 1.0.1-alpha.74",
+    "@google-cloud/functions-framework": ">= 3.0.0",
     "@hapi/hapi": ">= 20.0.0",
     "@trpc/server": ">= 9.0.0",
     "@types/aws-lambda": ">= 8.10.92",
@@ -161,6 +163,9 @@
       "optional": true
     },
     "@deepkit/http": {
+      "optional": true
+    },
+    "@google-cloud/functions-framework": {
       "optional": true
     },
     "@hapi/hapi": {
