--- a/www/package.json
+++ b/www/package.json
@@ -15,19 +15,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/plugin-client-redirects": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/plugin-client-redirects": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.2.1",
+    "prism-react-renderer": "1.3.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "typescript": "^4.6.3"
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@tsconfig/docusaurus": "1.0.7",
+    "typescript": "4.6.4"
   },
   "browserslist": {
     "production": [
