--- a/package.json
+++ b/package.json
@@ -74,63 +74,59 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
-    "@apollo/server": "*",
-    "@azure/functions": "^3.2.0",
-    "@deepkit/app": ">= 1.0.1-alpha.74",
-    "@deepkit/core": ">= 1.0.1-alpha.74",
-    "@deepkit/framework": ">= 1.0.1-alpha.74",
-    "@deepkit/http": ">= 1.0.1-alpha.74",
-    "@deepkit/type": ">= 1.0.1-alpha.74",
-    "@deepkit/type-compiler": ">= 1.0.1-alpha.74",
-    "@google-cloud/functions-framework": "^3.1.3",
-    "@hapi/hapi": "^20.2.2",
-    "@microsoft/api-documenter": "7.19.24",
-    "@microsoft/api-extractor": "7.33.6",
-    "@microsoft/api-extractor-model": "7.25.2",
+    "@apollo/server": "^4.7.1",
+    "@azure/functions": "^3.5.1",
+    "@deepkit/app": ">= 1.0.1-alpha.94",
+    "@deepkit/core": ">= 1.0.1-alpha.94",
+    "@deepkit/framework": ">= 1.0.1-alpha.94",
+    "@deepkit/http": ">= 1.0.1-alpha.94",
+    "@deepkit/type": ">= 1.0.1-alpha.94",
+    "@deepkit/type-compiler": ">= 1.0.1-alpha.94",
+    "@google-cloud/functions-framework": "^3.2.0",
+    "@hapi/hapi": "^21.3.2",
+    "@microsoft/api-documenter": "7.22.4",
+    "@microsoft/api-extractor": "7.34.8",
+    "@microsoft/api-extractor-model": "7.26.8",
     "@microsoft/tsdoc": "0.14.2",
-    "@rushstack/node-core-library": "3.53.2",
-    "@trpc/server": "^9.26.2",
-    "@types/aws-lambda": "^8.10.92",
+    "@rushstack/node-core-library": "3.58.0",
+    "@trpc/server": "^9.27.4",
+    "@types/aws-lambda": "^8.10.115",
     "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/hapi": "^18.0.7",
-    "@types/jest": "^28.1.6",
-    "@types/koa": "^2.13.5",
-    "@types/node": "12.20.43",
+    "@types/koa": "^2.13.6",
+    "@types/node": "18.16.5",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "body-parser": "^1.20.1",
-    "codecov": "^3.8.1",
-    "commitizen": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "body-parser": "^1.20.2",
+    "codecov": "^3.8.3",
+    "commitizen": "^4.3.0",
     "cors": "^2.8.5",
     "cz-conventional-changelog": "^3.3.0",
-    "ejs": "^3.1.6",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "express": "^4.18.1",
-    "fastify": "^4.10.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "express": "^4.18.2",
+    "fastify": "^4.17.0",
     "fastify-3": "npm:fastify@3.29.0",
-    "firebase-admin": "^11.0.1",
+    "firebase-admin": "^11.8.0",
     "firebase-admin-8": "npm:firebase-admin@^8.0.0",
-    "firebase-functions": "^3.22.0",
-    "husky": "^6.0.0",
-    "jest": "^28.1.3",
-    "koa": "^2.13.4",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.5.1",
-    "semantic-release": "^19.0.3",
-    "stream-mock": "^2.0.5",
-    "supertest": "^6.2.3",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.21",
-    "typescript": "~4.7.4"
+    "firebase-functions": "^3.24.1",
+    "husky": "^8.0.3",
+    "koa": "^2.14.2",
+    "lint-staged": "~13.2.2",
+    "prettier": "~2.8.8",
+    "semantic-release": "~21.0.2",
+    "stream-mock": "~2.0.5",
+    "supertest": "~6.3.3",
+    "ts-node": "~10.9.1",
+    "typedoc": "~0.24.6",
+    "typescript": "~4.9.5"
   },
   "peerDependencies": {
     "@apollo/server": ">= 4.0.0",
