--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "tsc -p tsconfig.build.json",
-    "build:docs": "tsc -p tsconfig.doc.json",
+    "build": "vite build",
+    "postbuild": "tsc -p tsconfig.build.json --emitDeclarationOnly",
+    "build:docs": "tsc -p tsconfig.doc.json --emitDeclarationOnly",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
     "coverage": "codecov",
@@ -19,8 +20,8 @@
     "docs:generate:parsing": "npm run build:docs && ts-node scripts/parse-docs.ts",
     "docs:generate:markdown": "ts-node scripts/generate-markdown.ts",
     "docs:generate:api-pages": "ts-node scripts/generate-api-pages.ts",
-    "test:watch": "jest --watch",
-    "test": "jest --coverage",
+    "test:watch": "vitest --watch",
+    "test": "vitest --run --coverage",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
@@ -76,12 +77,10 @@
   "devDependencies": {
     "@apollo/server": "^4.7.1",
     "@azure/functions": "^3.5.1",
-    "@deepkit/app": ">= 1.0.1-alpha.94",
-    "@deepkit/core": ">= 1.0.1-alpha.94",
-    "@deepkit/framework": ">= 1.0.1-alpha.94",
-    "@deepkit/http": ">= 1.0.1-alpha.94",
-    "@deepkit/type": ">= 1.0.1-alpha.94",
-    "@deepkit/type-compiler": ">= 1.0.1-alpha.94",
+    "@deepkit/app": "1.0.1-alpha.94",
+    "@deepkit/framework": "1.0.1-alpha.94",
+    "@deepkit/http": "1.0.1-alpha.94",
+    "@deepkit/workflow": "1.0.1-alpha.94",
     "@google-cloud/functions-framework": "^3.2.0",
     "@hapi/hapi": "^21.3.2",
     "@microsoft/api-documenter": "7.22.4",
@@ -94,12 +93,12 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/hapi": "^18.0.7",
     "@types/koa": "^2.13.6",
     "@types/node": "18.16.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-c8": "^0.31.0",
     "body-parser": "^1.20.2",
     "codecov": "^3.8.3",
     "commitizen": "^4.3.0",
@@ -113,41 +112,38 @@
     "eslint-plugin-tsdoc": "^0.2.17",
     "express": "^4.18.2",
     "fastify": "^4.17.0",
-    "fastify-3": "npm:fastify@3.29.0",
     "firebase-admin": "^11.8.0",
-    "firebase-admin-8": "npm:firebase-admin@^8.0.0",
     "firebase-functions": "^3.24.1",
+    "glob": "^10.2.2",
     "husky": "^8.0.3",
     "koa": "^2.14.2",
-    "lint-staged": "~13.2.2",
     "prettier": "~2.8.8",
     "semantic-release": "~21.0.2",
     "stream-mock": "~2.0.5",
     "supertest": "~6.3.3",
     "ts-node": "~10.9.1",
     "typedoc": "~0.24.6",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "vite": "^4.3.5",
+    "vitest": "^0.31.0"
   },
   "peerDependencies": {
     "@apollo/server": ">= 4.0.0",
     "@azure/functions": ">= 2.0.0",
-    "@deepkit/http": ">= 1.0.1-alpha.74",
+    "@deepkit/http": ">= 1.0.1-alpha.94",
     "@google-cloud/functions-framework": ">= 3.0.0",
-    "@hapi/hapi": ">= 20.0.0",
+    "@hapi/hapi": ">= 21.0.0",
     "@trpc/server": ">= 9.0.0",
     "@types/aws-lambda": ">= 8.10.92",
     "@types/body-parser": ">= 1.19.2",
     "@types/cors": ">= 2.8.12",
     "@types/express": ">= 4.15.4",
-    "@types/hapi": ">= 18.0.7",
     "@types/koa": ">= 2.11.2",
     "body-parser": ">= 1.20.0",
     "cors": ">= 2.8.5",
     "express": ">= 4.15.4",
-    "fastify": ">= 3.0.0",
-    "fastify-3": "npm:fastify@3.29.0",
-    "firebase-admin": ">= 8.0.0",
-    "firebase-admin-8": "npm:firebase-admin@^8.0.0",
+    "fastify": ">= 4.0.0",
+    "firebase-admin": ">= 11.0.0",
     "firebase-functions": ">= 3.0.0",
     "http-errors": ">= 2.0.0",
     "koa": ">= 2.5.1",
@@ -196,13 +192,7 @@
     "fastify": {
       "optional": true
     },
-    "fastify-3": {
-      "optional": true
-    },
     "firebase-admin": {
-      "optional": true
-    },
-    "firebase-admin-8": {
       "optional": true
     },
     "firebase-functions": {
@@ -222,9 +212,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "lint-staged": {
-    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
   },
   "release": {
     "branches": [
