--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "swc src/samples --out-dir dist",
+    "build": "swc src --out-dir dist",
     "bench": "npm run build && node dist/samples/compare-libraries.js"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/H4ad/serverless-adapter.git"
@@ -23,12 +22,13 @@
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
     "@vendia/serverless-express": "^4.10.1",
-    "cronometro": "^1.1.5",
+    "benchmark": "^2.1.4",
     "express": "^4.18.2",
     "serverless-http": "^3.1.0",
     "stream-mock": "^2.0.5"
   },
   "devDependencies": {
+    "@types/benchmark": "^2.1.2",
     "aws-lambda": "^1.0.7",
     "chokidar": "^3.5.3",
     "ts-node": "^10.9.1",
