ci(codeql): added typescript as language

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: javascript
+          languages: [javascript, typescript]
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
