ci(docs): only trigger when update workflows of docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/**'
+      - '.github/workflows/docs.yml'
       - 'www/**'
       - 'src/**'
       - 'scripts/**'
