--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,6 +3,13 @@ name: Pull Request
 on:
   workflow_dispatch:
   pull_request:
+    paths:
+      - 'src/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.*.json'
+      - 'vite.config.ts'
 
 jobs:
   build:
